grafik tambah opsi 5 menit

--- a/views/grafik.html
+++ b/views/grafik.html
@@ -69,11 +69,12 @@
             <div class="col">Tampilkan Perangkat : <select name="perangkat" class="perangkat" onchange="set_dpid(this.value)"></select></div>
             <div class="col">Periode yang ditampilkan : 
                 <select name="period" class="period" onchange="zoom(this.value)">
-                    <option value="1" selected>1 Jam Terakhir</option>
-                    <option value="2">24 Jam Terakhir</option>
-                    <option value="3">1 Minggu Terakhir</option>
-                    <option value="4">1 Bulan Terakhir</option>
-                    <option value="5">1 Tahun Terakhir</option>
+                    <option value="1" selected>5 Menit Terakhir</option>
+                    <option value="2">1 Jam Terakhir</option>
+                    <option value="3">24 Jam Terakhir</option>
+                    <option value="4">1 Minggu Terakhir</option>
+                    <option value="5">1 Bulan Terakhir</option>
+                    <option value="6">1 Tahun Terakhir</option>
                 </select>
             </div>
         </div>
