tambah periode laporan

--- a/views/laporan.html
+++ b/views/laporan.html
@@ -86,10 +86,16 @@
                 <br> <input type="radio" name="periode" id="periode" value="a" checked="checked">
                 Periode
                 <select name="per" id="per">
-                    <option value="1" selected>24 Jam Terakhir</option>
-                    <option value="2">1 Minggu Terakhir</option>
-                    <option value="3">1 Bulan Terakhir</option>
-                    <option value="4">1 Tahun Terakhir</option>
+                    <option value="1" selected>15 Menit Terakhir</option>
+                    <option value="2">30 Menit Terakhir</option>
+                    <option value="3">1 Jam Terakhir</option>
+                    <option value="4">6 Jam Terakhir</option>
+                    <option value="5">12 Jam Terakhir</option>
+                    <option value="6">24 Jam Terakhir</option>
+                    <option value="7">1 Minggu Terakhir</option>
+                    <option value="8">1 Bulan Terakhir</option>
+                    <option value="9">6 Bulan Terakhir</option>
+                    <option value="10">1 Tahun Terakhir</option>
                 </select>
                 <br> <input type="radio" name="periode" id="periode" value="b">
                 Jangka waktu dari <input type="date" name="dari" id="dari"> hingga <input type="date" name="ke" id="ke">
