tambah periode grafik

--- a/views/grafik.html
+++ b/views/grafik.html
@@ -69,12 +69,17 @@
             <div class="col">Tampilkan Perangkat : <select name="perangkat" class="perangkat" onchange="set_dpid(this.value)"></select></div>
             <div class="col">Periode yang ditampilkan : 
                 <select name="period" class="period" onchange="zoom(this.value)">
-                    <option value="1" selected>5 Menit Terakhir</option>
-                    <option value="2">1 Jam Terakhir</option>
-                    <option value="3">24 Jam Terakhir</option>
-                    <option value="4">1 Minggu Terakhir</option>
-                    <option value="5">1 Bulan Terakhir</option>
-                    <option value="6">1 Tahun Terakhir</option>
+                    <option value="11" selected>5 Menit Terakhir</option>
+                    <option value="1">15 Menit Terakhir</option>
+                    <option value="2">30 Menit Terakhir</option>
+                    <option value="3">1 Jam Terakhir</option>
+                    <option value="4">6 Jam Terakhir</option>
+                    <option value="5">12 Jam Terakhir</option>
+                    <option value="6">24 Jam Terakhir</option>
+                    <option value="7">1 Minggu Terakhir</option>
+                    <option value="8">1 Bulan Terakhir</option>
+                    <option value="9">6 Bulan Terakhir</option>
+                    <option value="10">1 Tahun Terakhir</option>
                 </select>
             </div>
         </div>
